rsa: cipher test passed